--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./lev.js" defer></script>
     <script src="./index.js" defer></script>
     <title>Document</title>
 </head>
