--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js" defer></script>
-    <title>Document</title>
+    <title>Rock, Papers, Scissors.</title>
 </head>
 <body>
 </body>
